[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/enemy/0base/enemy.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 0.784584, 2.37841, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1.05, 1.1, 0.95 ), Vector3( 0.95, 0.95, 1.05 ) ]
}

[sub_resource type="SphereShape" id=2]
radius = 4.0

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.134078, 1 ), 1.91674, 1.91674, 0, 0, Vector2( 0.849162, 1 ), -1.70573, -1.70573, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_align_y = true
spread = 180.0
initial_velocity = 15.0
scale_curve = SubResource( 4 )
color = Color( 1, 0, 0, 1 )
hue_variation = -0.15
hue_variation_random = 1.0

[sub_resource type="SpatialMaterial" id=6]
vertex_color_use_as_albedo = true

[sub_resource type="CubeMesh" id=7]
material = SubResource( 6 )

[node name="enemy" type="KinematicBody" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]

[node name="meshFolder" type="Spatial" parent="."]

[node name="idleAndDeath" type="AnimationPlayer" parent="meshFolder"]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="mainChecker" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="mainChecker"]
shape = SubResource( 2 )

[node name="everySecond" type="Timer" parent="."]
autostart = true

[node name="dieTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="deathParticles" type="Particles" parent="."]
emitting = false
amount = 32
one_shot = true
explosiveness = 0.9
visibility_aabb = AABB( -22, -20, -17, 44, 40, 34 )
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 7 )
